--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>web3radio</title>
-    <meta name="description" content="web3radio" />
+    <meta name="description" content="Decentralized Radio Station" />
     <meta name="author" content="web3radio" />
     <meta property="og:image" content="/og-image.png" />
   </head>
