--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,6 +7,22 @@
     <meta name="description" content="Decentralized Radio Station" />
     <meta name="author" content="web3radio" />
     <meta property="og:image" content="/og-image.png" />
+
+    <!-- ✅ Farcaster Mini App Embed -->
+    <meta name="fc:frame" content='{
+      "version": "next",
+      "imageUrl": "https://i.imgur.com/emXbMkd.png",
+      "button": {
+        "title": "🎧 Listen to Web3Radio",
+        "action": {
+          "type": "launch_frame",
+          "url": "https://www.web3radio.xyz",
+          "name": "Web3Radio",
+          "splashImageUrl": "https://www.web3radio.xyz/web3radio-logo.png",
+          "splashBackgroundColor": "#000000"
+        }
+      }
+    }' />
   </head>
 
   <body>
